--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
     {% block header %}{% endblock %}
     </head>
   <body>
-    <h3>Detect Most Common Colours</h3>
+    <div class="container px-4 py-4">
+      <h3 class="mx-auto text-center">Detect Most Common Colours</h3>
+    </div>
     {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   </body>
